--- a/PickerAlertView/PickerAlertView-Info.plist
+++ b/PickerAlertView/PickerAlertView-Info.plist
@@ -11,7 +11,7 @@
 	<key>CFBundleIconFiles</key>
 	<array/>
 	<key>CFBundleIdentifier</key>
-	<string>notes.${PRODUCT_NAME:rfc1034identifier}</string>
+	<string>com.aliyun.yunliao</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleName</key>
